# rust_company_directory

./: .gitignore  Cargo.toml  README.md
src/: MOCK_DATA.csv  lib.rs  main.rs  ui.rs
src/config/: manage.rs
src/db/: manage.rs
src/departments/: manage.rs
src/employees/: manage.rs
src/ui/: apps.rs  middleware.rs  server.rs
src/ui/templates/: base.html  departments.html  employees.html  index.html  users.html
src/users/: manage.rs
