[package]
name = "rust_company_directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jammdb = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.5"
actix-web = "3"
tera = "1.15.0"
actix-files = "0.5.0"
actix-web-grants = "2.2.0"
actix-grants-proc-macro = "1.2.0"
pwhash = "1"
webbrowser = "0.5.5"
csv = "1.1"
rand = "0.8.4"
configparser = "3.0.0"
postgres = { version = "*", features = ["with-chrono", "with-openssl"] }
chrono = "*"
openssl = { version = "0.10", features = ["vendored"] }